--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,20 @@
     <artifactId>daxx-test</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <!--testng-->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>4.3</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
