--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,19 @@
             <version>4.3</version>
         </dependency>
 
+        <!--for easy cross platform evaluation of WebDriver-->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
     </dependencies>
 
 </project>
